[gd_scene load_steps=18 format=2]

[ext_resource path="res://font/Crickhollow Demo.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://kod/Sozluk(Ekle-Cikar).gd" type="Script" id=2]
[ext_resource path="res://font/RNK 4.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resim/geri.png" type="Texture" id=4]
[ext_resource path="res://font/Times Turkish Transcription.TTF" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=19]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=18]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=15]
resource_name = "Açılma"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("OsmanlicaTurkce:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OsmanlicaTurkce:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=17]
resource_name = "Başlangıç"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("OsmanlicaTurkce:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OsmanlicaTurkce:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=16]
resource_name = "Kapanma"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("OsmanlicaTurkce:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OsmanlicaTurkce:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("OsmanlicaTurkce:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Sozluk(Ekle-Cikar)" type="Node2D"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 640.0
margin_bottom = 424.0
input_pass_on_modal_close_click = false

[node name="KelimeEkle" type="Label" parent="."]
margin_left = 144.0
margin_top = 40.0
margin_right = 272.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
text = "Kelime
Ekleme"
align = 1
valign = 1

[node name="KelimeÇıkar" type="Label" parent="."]
margin_left = 368.0
margin_top = 40.0
margin_right = 496.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
text = "Kelime
Çıkarma"
align = 1
valign = 1

[node name="bos" type="LineEdit" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 640.0
margin_bottom = 424.0
editable = false
virtual_keyboard_enabled = false

[node name="NormalYeri" type="Camera2D" parent="."]
position = Vector2( 320, 160 )

[node name="AndroidYeri" type="Camera2D" parent="."]
position = Vector2( 320, 264 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0

[node name="KelimeYok" type="Label" parent="."]
visible = false
margin_left = 352.0
margin_top = 224.0
margin_right = 512.0
margin_bottom = 238.0
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1

[node name="KelimeYok2" type="Label" parent="."]
visible = false
margin_left = 128.0
margin_top = 224.0
margin_right = 288.0
margin_bottom = 238.0
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1

[node name="OsmanlicaEkle" type="LineEdit" parent="."]
margin_left = 128.0
margin_top = 112.0
margin_right = 288.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 19 )
align = 1
placeholder_text = "Osmanlıca"
caret_blink = true
caret_blink_speed = 0.5

[node name="OsmanlicaCikar" type="LineEdit" parent="."]
margin_left = 352.0
margin_top = 112.0
margin_right = 512.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 8 )
align = 1
placeholder_text = "Türkçe"
caret_blink = true
caret_blink_speed = 0.5

[node name="TurkceEkle" type="LineEdit" parent="."]
margin_left = 128.0
margin_top = 176.0
margin_right = 288.0
margin_bottom = 216.0
custom_fonts/font = SubResource( 6 )
align = 1
placeholder_text = "Türkçe"
caret_blink = true
caret_blink_speed = 0.5

[node name="Ekle" type="Button" parent="."]
margin_left = 176.0
margin_top = 240.0
margin_right = 240.0
margin_bottom = 268.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.294118, 0.545098, 0.960784, 1 )
custom_colors/font_color = Color( 0.294118, 0.545098, 0.960784, 1 )
custom_colors/font_color_hover = Color( 0.294118, 0.545098, 0.960784, 1 )
custom_colors/font_color_pressed = Color( 0.294118, 0.545098, 0.960784, 1 )
custom_fonts/font = SubResource( 2 )
text = "Ekle"

[node name="Cikar" type="Button" parent="."]
margin_left = 400.0
margin_top = 240.0
margin_right = 464.0
margin_bottom = 268.0
custom_colors/font_color_focus = Color( 0.294118, 0.545098, 0.960784, 1 )
custom_colors/font_color = Color( 0.294118, 0.545098, 0.960784, 1 )
custom_colors/font_color_hover = Color( 0.294118, 0.545098, 0.960784, 1 )
custom_colors/font_color_pressed = Color( 0.294118, 0.545098, 0.960784, 1 )
custom_fonts/font = SubResource( 3 )
text = "Çıkar"

[node name="KelimeListe" type="Button" parent="."]
margin_left = 352.0
margin_top = 176.0
margin_right = 512.0
margin_bottom = 216.0
custom_colors/font_color_focus = Color( 0.596078, 0.764706, 0.47451, 1 )
custom_colors/font_color = Color( 0.596078, 0.764706, 0.47451, 1 )
custom_colors/font_color_hover = Color( 0.596078, 0.764706, 0.47451, 1 )
custom_colors/font_color_pressed = Color( 0.596078, 0.764706, 0.47451, 1 )
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "Kelime Listesi"

[node name="OsmanlicaTurkce" type="TextEdit" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 472.0
margin_top = 176.0
margin_right = 640.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 18 )
readonly = true
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
virtual_keyboard_enabled = false

[node name="Geri" type="Button" parent="."]
margin_left = 16.0
margin_top = 280.0
margin_right = 80.0
margin_bottom = 308.0
custom_fonts/font = SubResource( 2 )
icon = ExtResource( 4 )
icon_align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Başlangıç"
"anims/Açılma" = SubResource( 15 )
"anims/Başlangıç" = SubResource( 17 )
anims/Kapanma = SubResource( 16 )
anims/RESET = SubResource( 20 )

[connection signal="focus_entered" from="Panel" to="." method="_on_Panel_focus_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="focus_exited" from="OsmanlicaEkle" to="." method="_on_OsmanlicaEkle_focus_exited"]
[connection signal="button_up" from="Ekle" to="." method="_on_Ekle_button_up"]
[connection signal="pressed" from="Ekle" to="." method="_on_Ekle_pressed"]
[connection signal="button_up" from="Cikar" to="." method="_on_Cikar_button_up"]
[connection signal="pressed" from="Cikar" to="." method="_on_Cikar_pressed"]
[connection signal="toggled" from="KelimeListe" to="." method="_on_KelimeListe_toggled"]
[connection signal="pressed" from="Geri" to="." method="_on_Geri_pressed"]
